--- a/client/packages/common/src/intl/locales/en/reports.json
+++ b/client/packages/common/src/intl/locales/en/reports.json
@@ -25,6 +25,21 @@
     "label.received-from": "Received from:",
     "label.status": "Status:",
     "label.their-ref": "Their ref",
+    "label.confirmed-date": "Confirmed date:",
+    "label.printed-date": "Printed date:",
+    "label.entered-by": "Entered by:",
+    "label.invoice-type": "Invoice type:",
+    "label.created-date": "Created date:",
+    "label.shipped-date": "Shipped date:",
+    "label.line": "Line",
+    "label.location": "Location",
+    "label.item-name":"Item name",
+    "label.quantity": "Quantity",
+    "label.pack": "Pack",
+    "label.expiry": "Expiry",
+    "label.cost-price": "Cost price",
+    "label.sell-price": "Sell price",
+    "label.extension": "Extension",
     "message.contact-support": "Please contact support@msupply.foundation about configuring reports",
     "message.arguments": "You can customize what is shown on the report by specifying some of the optional details below. Click OK to view the report."
 }
