--- a/client/packages/common/src/intl/locales/en/reports.json
+++ b/client/packages/common/src/intl/locales/en/reports.json
@@ -40,6 +40,16 @@
     "label.cost-price": "Cost price",
     "label.sell-price": "Sell price",
     "label.extension": "Extension",
+    "label.in-stock": "In stock",
+    "label.stock-on-order": "Stock on order",
+    "label.amc-12-months": "AMC (12 months)",
+    "label.amc-24-months": "AMC (24 months",
+    "label.months-cover": "Months cover",
+    "label.usage-this-month": "Monthly usage (this month)",
+    "label.usage-last-month": "Monthly usage (last month",
+    "label.usage-2-months-prior": "Monthly usage (2 months ago",
+    "label.expiring-6-months": "Expiring in 6 months",
+    "label.expiring-12-months": "Expiring in 12 months",
     "message.contact-support": "Please contact support@msupply.foundation about configuring reports",
     "message.arguments": "You can customize what is shown on the report by specifying some of the optional details below. Click OK to view the report."
 }
