--- a/client/packages/common/src/intl/locales/en/reports.json
+++ b/client/packages/common/src/intl/locales/en/reports.json
@@ -50,6 +50,7 @@
     "label.usage-2-months-prior": "Monthly usage (2 months ago",
     "label.expiring-6-months": "Expiring in 6 months",
     "label.expiring-12-months": "Expiring in 12 months",
+    "label.supplied-to": "Supplied to:",
     "message.contact-support": "Please contact support@msupply.foundation about configuring reports",
     "message.arguments": "You can customize what is shown on the report by specifying some of the optional details below. Click OK to view the report."
 }
