Add translatoins for picklist portraint w logo outbound

--- a/client/packages/common/src/intl/locales/en/reports.json
+++ b/client/packages/common/src/intl/locales/en/reports.json
@@ -22,15 +22,16 @@
     "label.stock-at-risk": "Stock at risk",
     "label.expiring-in-days": "Expiring in (days)",
     "label.invoice": "Invoice",
-    "label.received-from": "Received from:",
-    "label.status": "Status:",
+    "label.received-from": "Received from",
+    "label.status": "Status",
     "label.their-ref": "Their ref",
-    "label.confirmed-date": "Confirmed date:",
-    "label.printed-date": "Printed date:",
-    "label.entered-by": "Entered by:",
-    "label.invoice-type": "Invoice type:",
-    "label.created-date": "Created date:",
-    "label.shipped-date": "Shipped date:",
+    "label.confirmed-date": "Confirmed date",
+    "label.printed-date": "Printed date",
+    "label.entered-by": "Entered by",
+    "label.entered-code": "Entered code",
+    "label.invoice-type": "Invoice type",
+    "label.created-date": "Created date",
+    "label.shipped-date": "Shipped date",
     "label.line": "Line",
     "label.location": "Location",
     "label.item-name":"Item name",
@@ -50,7 +51,9 @@
     "label.usage-2-months-prior": "Monthly usage (2 months ago",
     "label.expiring-6-months": "Expiring in 6 months",
     "label.expiring-12-months": "Expiring in 12 months",
-    "label.supplied-to": "Supplied to:",
+    "label.supplied-to": "Supplied to",
+    "label.packing-slip": "Packing slip",
+    "label.issued": "Issued",
     "message.contact-support": "Please contact support@msupply.foundation about configuring reports",
     "message.arguments": "You can customize what is shown on the report by specifying some of the optional details below. Click OK to view the report."
 }
