Add translations for requisition reports

--- a/client/packages/common/src/intl/locales/en/reports.json
+++ b/client/packages/common/src/intl/locales/en/reports.json
@@ -23,8 +23,10 @@
     "label.expiring-in-days": "Expiring in (days)",
     "label.invoice": "Invoice",
     "label.received-from": "Received from",
+    "label.requested-from": "Requested from",
     "label.status": "Status",
     "label.their-ref": "Their ref",
+    "label.our-ref": "Our ref",
     "label.confirmed-date": "Confirmed date",
     "label.printed-date": "Printed date",
     "label.entered-by": "Entered by",
@@ -32,6 +34,9 @@
     "label.invoice-type": "Invoice type",
     "label.created-date": "Created date",
     "label.shipped-date": "Shipped date",
+    "label.target-qty": "Target Qty",
+    "label.suggested-qty": "Suggested Qty",
+    "label.requested-qty": "Requested Qty",
     "label.line": "Line",
     "label.location": "Location",
     "label.item-name":"Item name",
@@ -43,6 +48,7 @@
     "label.extension": "Extension",
     "label.in-stock": "In stock",
     "label.stock-on-order": "Stock on order",
+    "label.amc": "AMC",
     "label.amc-12-months": "AMC (12 months)",
     "label.amc-24-months": "AMC (24 months",
     "label.months-cover": "Months cover",
@@ -58,6 +64,10 @@
     "label.item-code": "Item code",
     "label.original": "Original",
     "label.new": "New",
+    "label.comments": "Comments",
+    "label.collected-by": "Collected by",
+    "label.authorized-by": "Authorized-by",
+    "label.requisition-category-message": "Requisition Category: Category Value",
     "message.contact-support": "Please contact support@msupply.foundation about configuring reports",
     "message.arguments": "You can customize what is shown on the report by specifying some of the optional details below. Click OK to view the report."
 }
