--- a/client/packages/common/src/intl/locales/en/reports.json
+++ b/client/packages/common/src/intl/locales/en/reports.json
@@ -67,6 +67,8 @@
     "label.original": "Original",
     "label.new": "New",
     "label.comments": "Comments",
+    "label.comment": "Comment",
+    "label.reason": "Reason",
     "label.collected-by": "Collected by",
     "label.authorized-by": "Authorized-by",
     "label.requisition-category-message": "Requisition Category: Category Value",
@@ -80,6 +82,13 @@
     "label.well-stocked": "Well stocked",
     "label.undrstocked": "Understocked",
     "label.overstocked": "Overstocked",
+    "label.stocktake-number": "Stocktake number",
+    "label.cost-price-per-pack": "Cost price (per pack)",
+    "label.snapshot-packs": "Snapshot packs",
+    "label.counted-packs": "Counted packs",
+    "label.variance-packs": "Variance (packs)",
+    "label.variance-value": "Variance (value)",
     "message.contact-support": "Please contact support@msupply.foundation about configuring reports",
-    "message.arguments": "You can customize what is shown on the report by specifying some of the optional details below. Click OK to view the report."
+    "message.arguments": "You can customize what is shown on the report by specifying some of the optional details below. Click OK to view the report.",
+    "title.stock-take-variance-report": "Stock Take Variance Report"
 }
