--- a/client/packages/common/src/intl/locales/en/reports.json
+++ b/client/packages/common/src/intl/locales/en/reports.json
@@ -88,6 +88,9 @@
     "label.counted-packs": "Counted packs",
     "label.variance-packs": "Variance (packs)",
     "label.variance-value": "Variance (value)",
+    "label.net-increase": "Net Increase",
+    "label.net-decrease": "Net Decrease",
+    "label.net-variance": "Net Variance",
     "message.contact-support": "Please contact support@msupply.foundation about configuring reports",
     "message.arguments": "You can customize what is shown on the report by specifying some of the optional details below. Click OK to view the report.",
     "title.stock-take-variance-report": "Stock Take Variance Report"
